# whisper-rs-nx

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/context/: architecture.yaml  contributing.yaml  harness.yaml  lessons-learned.yaml  open-source-operations.yaml  philosophy.yaml  testing.yaml  upstream.yaml
.agents/workflows/: development-cycle.yaml  issue-driven-development.yaml
.users/context/: architecture.md  contributing.md  harness.md  lessons-learned.md  open-source-operations.md  philosophy.md  testing.md  upstream.md
.users/context/ko/: architecture.md  contributing.md  harness.md  lessons-learned.md  open-source-operations.md  philosophy.md  testing.md  upstream.md
examples/: test_fallback.rs
examples/full_usage/: Cargo.toml
src/: lib.rs  whisper_ctx.rs  whisper_ctx_wrapper.rs
sys/: Cargo.toml  build.rs
