[package]
name = "whisper-rs-nx-sys"
version = "0.14.1"
edition = "2021"
rust-version.workspace = true
description = "Rust bindings for whisper.cpp (FFI bindings) — Nextain fork"
license = "Apache-2.0"
repository = "https://github.com/nextain/whisper-rs-nx"
links = "whisper"
include = [
	"whisper.cpp/bindings/javascript/package-tmpl.json",
	"whisper.cpp/bindings/CMakeLists.txt",
	"whisper.cpp/CMakeLists.txt",
	"whisper.cpp/cmake",
	"whisper.cpp/src/**",
	"whisper.cpp/include/whisper.h",
	"whisper.cpp/ggml/cmake",
	"whisper.cpp/ggml/CMakeLists.txt",
	"whisper.cpp/ggml/src/**",
	"whisper.cpp/ggml/include/*.h",
	"whisper.cpp/LICENSE",
	"src/*.rs",
	"build.rs",
	"wrapper.h",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
coreml = []
cuda = []
cuda-dynamic = []
hipblas = []
openblas = []
metal = []
vulkan = []
force-debug = []
openmp = []
intel-sycl = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.72"
cfg-if = "1"
fs_extra = "1.3"
semver = "1.0"
